# sahanarajashekara

./: README.md  vercel.json
backend/: agent.py  main.py  mcp_manager.py  pyproject.toml  requirements.txt
backend/data/json/: adventures.json  certificates.json
data/json/: about.json  adventures.json  dog.json  jackie.json  projects.json
mcp-server/: dockerfile  pyproject.toml  requirements.txt  server.py
mcp-server/data/json/: education.json  experience.json  skills.json
ui/: index.html  package-lock.json  package.json
ui/public/images/: canyoneering_cert.heic  skiing_cert.heic
ui/src/: App.css  App.tsx
ui/src/components/: AboutMe.tsx  Adventures.tsx  Certificates.tsx  ChatWidget.tsx  Divider.tsx  Education.tsx  Experience.tsx  Header.tsx  Jackie.tsx  Landing.tsx  Projects.tsx
ui/src/data/json/: about.json  adventures.json  certificates.json  education.json  experience.json  projects.json
